Mon Feb  2 11:48:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Transport_Cache_Manager/Bug_3549_Regression.cpp:
          Improved debug message

        * tests/Transport_Cache_Manager/Bug_3558_Regression.cpp:
        * tests/Transport_Cache_Manager/run_test.pl:
        * tests/Transport_Cache_Manager/TCM.mpc:
          Added regression test for bugzilla 3558

Mon Feb  2 11:18:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager.h:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Transport_Cache_Manager_T.h:
        * tao/Transport_Cache_Manager_T.inl:
          The purging strategy is now also a template argument

Mon Feb  2 10:54:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Transport_Cache_Manager directory

        * tests/Transport_Cache_Manager/*:
          New directory for just TCM tests using a mock transport,
          transport descriptor interface, and purging strategy.

Mon Feb  2 09:15:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:

          Fix Bug_3559.

Mon Feb  2 08:00:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Thread_Lane_Resources.cpp:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Transport_Cache_Manager_T.h:
          Changed the constructor of the TCM to accept all different config
          values seperately instead of accepting the orb_core. This makes
          it easier to write unit tests for the TCM

Mon Feb  2 07:29:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connector.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Control_Registry.h:
          Added missing include due to transport cache manager refactoring

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.h:
          Updated for Messaging_Semantics move
